# quick-wasm-js

./: .gitignore  CHANGELOG.md  Develop.md  LICENSE  README.md  link.config.json  package.json  pnpm-lock.yaml  rollup.config.js  rollup.config.test.js  tsconfig.json  vite.config.js  vite.config.worker.js  webpack.config.dev.js  webpack.config.js  webpack.config.test.js
docs/: index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: QuickWebAssemblyFactory.html  default.html
docs/interfaces/: QuickWasmManager.html  QuickWorkerWasmManager.html
examples/: index.html  index.ts
plugins/vite/: CMakeLists.js  index.js  package.json  pnpm-lock.yaml  vite.config.js
public/: index.ts
public/assets/: fib.js  fib.wasm
public/cpp/: CMakeLists.txt  build.sh  fib.cc  fib.js  fib.wasm
public/cpp/build.em/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  fib.js  fib.wasm
src/: index.ts  message.interface.ts  wasm-proxy.ts  wasm-worker.ts  wasm.worker.ts  worker.js
test/: index.html  index.ts
test/assets/cpp/: CMakeLists.txt  fib.cc
test/assets/cpp/build.em/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
test/common/: index.ts  spec-container.ts  spec.config.js
test/configs/: spec.config.js  test.config.ts
test/cpp/: CMakeLists.txt
test/spec/: basic.spec.js  npm-link.spec.js  self.spec.js  test-class.spec.js  worker.basic.spec.js
test/util/: test-class.ts
(+6 files in other folders)
